syntax = "proto3";

option go_package = "./protos";

message LogEntry {
    int64 index  = 1;
    int64 term   = 2;
    bytes  data   = 3;
}

message AppendEntriesRequest {
    string            leader_id      = 1;
    int64            term           = 2;
    int64          leader_commit  = 3;
    int64            prev_log_index = 4;
    int64            prev_log_term  = 5;
    repeated LogEntry entries        = 6;
}

message AppendEntriesResponse {
    int64 term    = 1;
    int64 index   = 2;
    bool   success = 3;
}

message RequestVoteRequest {
    string candidate_id   = 1;
    int64 term           = 2;
    int64 last_log_index = 3;
    int64 last_log_term  = 4;
}

message RequestVoteResponse {
    int64 term         = 1;
    bool   vote_granted = 2;
}

service Raft {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}